syntax = "proto3";

package api.order.service.v1;

option go_package = "github.com/nextzeus/kratos-shop/api/order/server/v1;v1";
option java_multiple_files = true;
option java_package = "api.order.service.v1";

service Order {
	rpc CreateOrder (CreateOrderRequest) returns (CreateOrderReply);
	rpc UpdateOrder (UpdateOrderRequest) returns (UpdateOrderReply);
	rpc GetOrder (GetOrderRequest) returns (GetOrderReply);
	rpc ListOrder (ListOrderRequest) returns (ListOrderReply);
}

message CreateOrderRequest {
	int64 user_id = 1;
}
message CreateOrderReply {
	int64 id = 1;
	int64 user_id = 2;
}

message UpdateOrderRequest {
	int64 id = 1;
	int64 user_id = 2;
}
message UpdateOrderReply {
	int64 id = 1;
	int64 user_id = 2;
}

message GetOrderRequest {
	int64 id = 1;
}
message GetOrderReply {
	int64 id = 1;
	int64 user_id = 2;
}

message ListOrderRequest {
	int64 uid = 1;
	int64 page_num = 2;
	int64 page_size = 3;
}
message ListOrderReply {
	message Order {
		int64 id = 1;
		int64 user_id = 2;
	}
	repeated Order orders = 1;
}